force npm build

--- a/eas.json
+++ b/eas.json
@@ -4,8 +4,9 @@
   },
   "build": {
     "preview-apk": {
-      "android": {
-        "buildType": "apk"
+      "node": "18.17.0",
+      "npm": true,
+      "android": { "buildType": "apk"
       }
     },
     "production": {
