--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iwa-crece-app",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@10.5.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
