--- a/app.json
+++ b/app.json
@@ -27,8 +27,10 @@
       "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
-    "eas": {
-      "projectId": "6b694beb-xxxxxxxxxxxxxxxxxxxx"
+    "extra": {
+      "eas": {
+       "projectId": "6b694beb-xxxxxxxxxxxxxxxxxxxx"
+      }
     }
   }
 }
