--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
     },
     "extra": {
       "eas": {
-       "projectId": "6b694beb-xxxxxxxxxxxxxxxxxxxx"
+       "projectId": "6b694beb-c231-4af1-b600-051fffafcbc2"
       }
     }
   }
