--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Diloggun del Disc\u00edpulo",
-    "slug": "diloggun-del-discipulo",
+    "slug": "cd-diloggun-del-discipulo-app-apk-ready-v2-npm-install",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
